# speach_vision_assitant

./: .gitignore  TTS_CACHE_README.md  check_audio_status.py  check_dependencies.py  checkcamindx.py  cpu_optimizer.py  emoMain.py  goMain.py  gooAudioTxt.py  googlASR.py  googleLLM.py  googleai.py  googleasr.py  insightfacePyWith.py  listener.py  main copy.py  main.py  pyproject.toml  qwenai.py  realtimebailunEmo.py  speak.py  test_volume.py  tts_cache_manager.py  websocket_server.py  whispt.py
ai_vision_speach/: bailunEmo.py  fetchDataFromAPI.py  insightfacePyWith.py  listenSpeakLLM.py  main copy.py  main.py  realtimebailunEmo.py  task_monitor.py
ai_vision_speach/utils/: RealtimeMp3Player.py  chat.py  echocheck.py  suggestion.py
latestUPDATE/: .asoundrc  ai-vision-speech.service  bailunEmo.py  check_audio.py  check_audio_status.py  checkcamindx.py  fetchDataFromAPI.py  listenSpeakLLM.py  main.py  openrout.py  pyproject.toml  speak.py  task_monitor.py
latestUPDATE/utils/: chat.py
tts_cache/: cache_index.json
tts_cache_google/: cache_index.json
tts_qwen_cache/: cache_index.json
utils/: RealtimeMp3Player.py  chat.py  greetings.py  suggestion.py
